<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Крави и Бикове</string>
	<string name="app_help_name">Как се играе играта</string>
	<string name="action_settings">Settings</string>
	<string name="button0">0</string>
	<string name="button1">1</string>
	<string name="button2">2</string>
	<string name="button3">3</string>
	<string name="button4">4</string>
	<string name="button5">5</string>
	<string name="button6">6</string>
	<string name="button7">7</string>
	<string name="button8">8</string>
	<string name="button9">9</string>
	<string name="backspace">"изтрии"</string>
	<string name="reveal_number">"правила"</string>
	<string name="number_here">number here</string>
	<string name="icon_here">bull or cow icon here</string>
	<string name="help_text"></string>
</resources>
