<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="bottom|center"
	android:background="@color/black"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:baselineAligned="false" >

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight=".30" />
	
		<ListView
			android:id="@+id/results_list_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight=".60" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:baselineAligned="false"
		android:gravity="bottom|center" >
		
		<TextView
			android:id="@+id/numberEnterred"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:layout_marginBottom="25dp"
			android:minEms="4"
			android:textSize="48sp"
			android:text="@string/number_here"
			android:background="@color/lightgrey"
			android:textColor="@color/yellow"
			android:textAppearance="?android:attr/textAppearanceLarge" />

	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >
		
		<Button
			android:id="@+id/button1"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button1"
			android:textColor="@color/yellow"
			android:textStyle="bold"
			android:onClick="buttonClickListener"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button2"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button2"
			android:textColor="@color/yellow"
			android:textStyle="bold"
			android:onClick="buttonClickListener"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button3"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button3"
			android:textColor="@color/yellow"
			android:textStyle="bold"
			android:onClick="buttonClickListener"
			android:textSize="48sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<Button
			android:id="@+id/button4"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button4"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button5"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button5"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button6"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button6"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<Button
			android:id="@+id/button7"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button7"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button8"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button8"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button9"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button9"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >

		<Button
			android:id="@+id/reveal_number"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/reveal_number"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/button0"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/button0"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />

		<Button
			android:id="@+id/backspace"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:background="@color/darkgrey"
			android:text="@string/backspace"
			android:textColor="@color/yellow"
			android:onClick="buttonClickListener"
			android:textStyle="bold"
			android:textSize="48sp" />
	</LinearLayout>

</LinearLayout>